# cppm

./: README.md  cppm
templates/: CMakeLists.txt  test.CMakeLists.txt  yatf.main.cpp
